[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mifid-ii-ai-mcp"
version = "1.0.0"
description = "MiFID II Article 17 algorithmic trading + RTS 6 testing/risk controls + best execution AI compliance for investment firms."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["mifid-ii", "algo-trading", "hft", "rts-6", "best-execution", "mcp", "mcp-server", "model-context-protocol", "ai-governance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/meok-ai-labs/mifid-ii-ai-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
mifid-ii-ai-mcp = "server:main"
